--- a/loop/random_color/style.css
+++ b/loop/random_color/style.css
@@ -6,7 +6,8 @@
 
 body {
     height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif;*/
+    font-family: 'Lato', sans-serif; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,16 +20,17 @@ h1 {
 
 .block {
     margin-top: 20px;
-    width: 150px;
+    width: 250px;
     height: 150px;
     background-color: #008000;
+    font-size: 1.7rem;
+    display: grid;
+    place-items: center;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    color: #fff;
 }
 
-.color {
-    font-size: 1.5rem;
-    text-align: center;
-    margin: 20px 0;
-}
 
 .btn {
     background-color: #000;
