--- a/if/guess_number/style.css
+++ b/if/guess_number/style.css
@@ -1,71 +1,81 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"); */
 
-html {
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  height: 100%;
-}
-
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
 }
 
 body {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  line-height: 1.2;
-  height: 100%;
-  background-image: url(bg.png);
+  height: 100vh;
+  background-color: #565264;
+  font-size: 20px;
 }
 
 .container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.canvas {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #fff;
   width: 600px;
-  height: 400px;
-  border: 1px solid #eee;
-  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-  flex-direction: column;
-  padding: 20px;
+  padding: 40px;
+  background-color: #D6CFCB;
 }
 
-.desc__title {
+.desc {
+  margin-bottom: 40px;
+}
+
+.title {
   font-size: 2em;
   text-align: center;
   margin-bottom: 15px;
   color: #222;
 }
 
-.desc__subtitle {
-  color: #6c757d;
+.task {
+  padding: 15px;
+  background-color: #fff;
+  border: 2px solid #706677;
 }
 
-.filed__form__label {
-  color: #6c757d;
+.task li {
+  margin: 5px 0 5px 30px;
+}
+
+.field {
+  text-align: center;
+}
+
+.label {
   margin-right: 10px;
 }
 
-.field__form__input {
+input#number {
   padding: 10px;
-  width: 150px;
-  margin-right: 10px;
+  width: 200px;
+  margin-right: 50px;
   border: 1px solid #ccc;
+  background-color: #fff;
+  font-size: 20px;
 }
 
-.field__form__btn {
+.btn {
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #565264;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #706677;
+  color: #fff;
+}
+
+.result-wrp {
+  margin-top: 30px;
+}
+
+.result-wrp div {
+  margin-bottom: 10px;
 }
