--- a/settimeout/text_change_color/style.css
+++ b/settimeout/text_change_color/style.css
@@ -2,21 +2,19 @@
     max-width: 1000px;
     margin: 50px auto 0 auto;
     text-align: center;
+    font-family: sans-serif;
 }
 
 #text  {
-    font-size: 60px;
+    font-size: 50px;
     font-weight: bold;
     margin-bottom: 100px;
 }
 
-button {
+.btn {
     display: inline-block;
     padding: 5px 30px;
     font-size: 30px;
     cursor: pointer;
 }
 
-#stop {
-    display: none;
-}
