--- a/date/analog_clock/style.css
+++ b/date/analog_clock/style.css
@@ -12,38 +12,32 @@ body {
     background-size: cover;
     height: 440px;
     width: 440px;
-    margin: auto;
 }
 
 #hour, #minute, #second {
     background: black;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    transform-origin: 50% 0;
     border-radius: 10px;
 }
 
 #hour {
-    transform-origin: bottom;
-    width: 2%;
-    height: 22%;
-    top: 28%;
-    left: 48.8%;
+    width: 10px;
+    height: 90px;
 }
 
 #minute {
-    transform-origin: bottom;
-    width: 1.6%;
-    height: 30%;
-    top: 21%;
-    left: 50%;
+    width: 7px;
+    height: 130px;
     opacity: 0.8;
 }
 
-
 #second{
-    transform-origin: bottom;
-    width: 1%;
-    height: 33%;
-    top: 17%;
-    left: 49.3%;
+    width: 5px;
+    height: 150px;
     opacity: 0.6;
 }
+
