--- a/loop/month_calender/style.css
+++ b/loop/month_calender/style.css
@@ -1,87 +1,82 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+* {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
     box-sizing: border-box;
 }
 
-.container{
-    width: 100%;
+body {
     height: 100vh;
     background-color: salmon;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Lato', sans-serif;
 }
 
 .calender{
     background-color: black;
     color: lightgray;
     width: 450px;
-    height: 520px;
+    padding-bottom: 40px;
     border-radius: 10px;
-    box-shadow: 4px 4px 8px rgba(0, 0, 0, .4);
 }
 
-.month{
-    width: 100%;
-    height: 120px;
+.header {
+    padding: 20px 0;
     background-color: lightseagreen;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
     border-radius: 10px 10px 0 0;
 }
 
-.month h1{
+.month {
+    text-align: center;
     font-size: 30px;
-    font-weight: 400;
     text-transform: uppercase;
+    margin-bottom: 10px;
 }
 
-.month p{
-    font-size: 16px;
+.date {
+    text-align: center;
+    font-size: 22px;
 }
 
-.weekdays{
-    width: 100%;
+.weekdays {
     height: 50px;
     display: flex;
 }
 
-.weekdays div{
-    font-size: 15px;
-    font-weight: bold;
-    letter-spacing: 1px;
+.weekdays div {
     width: 100%;
+    font-size: 18px;
+    letter-spacing: 1px;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
-.days{
-    width: 100%;
+.days {
     display: flex;
     flex-wrap: wrap;
     padding: 2px;
 }
 
-.days div{
+.days div {
     font-size: 14px;
     margin: 3px;
-    width: 57.5px;
+    width: calc(446px / 7 - 6px);
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 18px;
 }
 
-.days div:hover:not(.empty){
+.days div:hover:not(.empty) {
     border: 2px solid gray;
     cursor: pointer;
 }
 
-.today{
+.today {
     background-color: lightseagreen;
 }
