--- a/event/change_bg_block/style.css
+++ b/event/change_bg_block/style.css
@@ -27,7 +27,7 @@ button {
 #block {
 	width: 150px;
 	height: 150px;
-	background-color:  red;
+	background-color: black;
 	margin: 20px auto 0 ;
 }
 
