--- a/date/analog_clock/style.css
+++ b/date/analog_clock/style.css
@@ -17,10 +17,10 @@ body {
 #hour, #minute, #second {
     background: black;
     position: absolute;
-    top: 50%;
+    bottom: 50%;
     left: 50%;
     transform: translateX(-50%);
-    transform-origin: 50% 0;
+    transform-origin: 50% 100%;
     border-radius: 10px;
 }
 
@@ -32,12 +32,22 @@ body {
 #minute {
     width: 7px;
     height: 130px;
-    opacity: 0.8;
 }
 
 #second{
+    height: 180px;;
     width: 5px;
-    height: 150px;
-    opacity: 0.6;
+    background-color: #df2e2e;
+}
+
+#disc {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #df2e2e;
 }
 
