--- a/properties/change_img_list/style.css
+++ b/properties/change_img_list/style.css
@@ -3,34 +3,39 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 40px;
     height: 100vh;
     overflow: hidden;
 }
-  
+
 .list {
-    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 15px;;
+}
+  
+.list div {
+    font-size: 25px;
     font-family: sans-serif;
     text-transform: uppercase;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-  }
-  
-  .list li {
+    border: 2px solid slateblue;
+    padding: 10px 20px;
     cursor: pointer;
-    margin: 0 20px 0 0;
-    padding: 0;
-    display: inline-block;
-    user-select: none;
 }
 
-.list li:hover {
+.list div:first-child {
     color: red;
 }
   
+  .list div:hover {
+    color: red;
+    user-select: none;
+}
+
+  
 img {
-    margin-top: 40px;
-    height: 300px;
+    height: 200px;
+    border: 2px solid cornflowerblue;
+    padding: 15px;
 }
   
